--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
   @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
 
-
+  @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Inter:wght@400;500;600;700;800;900&display=swap');
  
 
 @tailwind base;
